Fix. Center alignment

--- a/Style.css
+++ b/Style.css
@@ -54,6 +54,7 @@ header, footer {
 
 .WrTie {
     height: 20pt;
+    margin: auto;
 }
 
 footer p {
